--- a/src/main/resources/archetype-resources/pom.xml
+++ b/src/main/resources/archetype-resources/pom.xml
@@ -10,9 +10,9 @@
   <dependencies>
 
     <dependency>
-      <groupId>javax.ejb</groupId>
-      <artifactId>ejb-api</artifactId>
-      <version>3.0</version>
+      <groupId>org.apache.geronimo.specs</groupId>
+      <artifactId>geronimo-j2ee_1.4_spec</artifactId>
+      <version>1.0</version>
       <scope>provided</scope>
     </dependency>
 
@@ -25,14 +25,6 @@
     
   </dependencies>
 
-  <repositories>
-      <repository>
-          <id>java.net1</id>
-          <name>Java.Net Maven1 Repository, hosts the ejb-jar dependency</name>
-          <url>http://download.java.net/maven/1</url>
-          <layout>legacy</layout>
-      </repository>
-  </repositories>
 
   <build>
     <plugins>
