--- a/pom.xml
+++ b/pom.xml
@@ -6,10 +6,16 @@
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>ejb-j2ee14</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0</version>
   <packaging>jar</packaging>
   <name>J2EE 1.4 EJB Archetype</name>
   <description>
     An archetype which contains a sample J2EE 1.4 EJB Maven project.
   </description>
+
+  <scm>
+    <connection>scm:svn:http://svn.codehaus.org/mojo/tags/ejb-j2ee14-1.0</connection>
+    <developerConnection>scm:svn:https://svn.codehaus.org/mojo/tags/ejb-j2ee14-1.0</developerConnection>
+    <url>http://fisheye.codehaus.org/browse/mojo/tags/ejb-j2ee14-1.0</url>
+  </scm>
 </project>
