simplify generated project names
git-svn-id: file:///home/tiste/MOJOHAUS-TO-GIT/SVN-MOJO-WIP/trunk/mojo/mojo-archetypes/ejb-j2ee14@9183 52ab4f32-60fc-0310-b215-8acea882cd1b

--- a/src/main/resources/archetype-resources/pom.xml
+++ b/src/main/resources/archetype-resources/pom.xml
@@ -5,7 +5,7 @@
   <artifactId>${artifactId}</artifactId>
   <packaging>ejb</packaging>
   <version>${version}</version>
-  <name>${artifactId} Maven J2EE 1.4 EJB</name>
+  <name>${artifactId} J2EE 1.4 EJB</name>
   <url>http://maven.apache.org</url>
   <dependencies>
 
