Inheriting <scm> from the parent does not work in maven-release-plugin for these archetypes. (Perhaps because the parent is specified as a release rather than a snapshot.)
git-svn-id: file:///home/tiste/MOJOHAUS-TO-GIT/SVN-MOJO-WIP/trunk/mojo/mojo-archetypes/ejb-j2ee14@12704 52ab4f32-60fc-0310-b215-8acea882cd1b

--- a/pom.xml
+++ b/pom.xml
@@ -12,4 +12,9 @@
   <description>
     An archetype which contains a sample J2EE 1.4 EJB Maven project.
   </description>
+  <scm>
+    <connection>scm:svn:http://svn.codehaus.org/mojo/trunk/mojo/mojo-archetypes/ejb-j2ee14</connection>
+    <developerConnection>scm:svn:https://svn.codehaus.org/mojo/trunk/mojo/mojo-archetypes/ejb-j2ee14</developerConnection>
+    <url>http://fisheye.codehaus.org/browse/mojo/trunk/mojo/mojo-archetypes/ejb-j2ee14</url>
+  </scm>
 </project>
