Do not append extra descriptive labels like "J2EE 1.4 Webapp" to <name>s; it is just annoying. http://netbeans.org/bugzilla/show_bug.cgi?id=196520
git-svn-id: file:///home/tiste/MOJOHAUS-TO-GIT/SVN-MOJO-WIP/trunk/mojo/mojo-archetypes/ejb-j2ee14@13737 52ab4f32-60fc-0310-b215-8acea882cd1b

--- a/src/main/resources/archetype-resources/pom.xml
+++ b/src/main/resources/archetype-resources/pom.xml
@@ -7,7 +7,7 @@
   <version>${version}</version>
   <packaging>ejb</packaging>
 
-  <name>${artifactId} J2EE 1.4 EJB</name>
+  <name>${artifactId}</name>
   <url>http://maven.apache.org</url>
 
   <dependencies>
@@ -50,6 +50,5 @@
       </plugin>
 
     </plugins>
-    <finalName>${artifactId}</finalName>
   </build>
 </project>
