--- a/pom.xml
+++ b/pom.xml
@@ -6,15 +6,15 @@
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>ejb-j2ee14</artifactId>
-  <version>1.3</version>
+  <version>1.4-SNAPSHOT</version>
   <packaging>maven-archetype</packaging>
   <name>J2EE 1.4 EJB Archetype</name>
   <description>
     An archetype which contains a sample J2EE 1.4 EJB Maven project.
   </description>
   <scm>
-    <connection>scm:svn:http://svn.codehaus.org/mojo/tags/ejb-j2ee14-1.3</connection>
-    <developerConnection>scm:svn:https://svn.codehaus.org/mojo/tags/ejb-j2ee14-1.3</developerConnection>
-    <url>http://fisheye.codehaus.org/browse/mojo/tags/ejb-j2ee14-1.3</url>
+    <connection>scm:svn:http://svn.codehaus.org/mojo/trunk/mojo/mojo-archetypes/ejb-j2ee14</connection>
+    <developerConnection>scm:svn:https://svn.codehaus.org/mojo/trunk/mojo/mojo-archetypes/ejb-j2ee14</developerConnection>
+    <url>http://fisheye.codehaus.org/browse/mojo/trunk/mojo/mojo-archetypes/ejb-j2ee14</url>
   </scm>
 </project>
